テスト/src/objects/cost_SFO__c.object
<CustomObject>
    <fields>
        <fullName>HyperLinkTest__c</fullName>
        <formula>HYPERLINK(&apos;/00O80000005R3cU?pc0=ACCOUNT.NAME&amp;pn0=co&amp;pv0=00&amp;pc1=&apos; &amp; IF(  $User.LastName &amp; &quot; &quot; &amp;  $User.FirstName  &lt;&gt;&quot;横田 良&quot; ,&quot;CREATED_DATE&quot;,&quot;LAST_UPDATE&quot;) &amp; &apos;&amp;pn1=lt&amp;pv1=&apos; &amp; TEXT(MONTH(TODAY())) &amp; &apos;/&apos; &amp; TEXT(DAY(TODAY())) &amp; &apos;/&apos; &amp; TEXT(YEAR(TODAY())) &amp; &apos;&amp;pc2=DUE_DATE&amp;pn2=eq&amp;pv2=&amp;bool_filter=1 AND (2 OR 3)&amp;colDt_c=DUE_DATE&amp;colDt_q=curfy&amp;details=no&amp;sort=ACCOUNT.NAME&apos;, &apos;ハイパーリンク数式テスト&apos;)</formula>
        <label>ハイパーリンク数式テスト</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFO_invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>大阪府の請求が完了したものはチェックをしてください</inlineHelpText>
        <label>請求済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WF_schejuled_receipt__c</fullName>
        <formula>( YEAR( TODAY() ) * 100 + MONTH ( TODAY() ) ) - VALUE ( TEXT( schejuled_receipt_yyyymm__c ) )</formula>
        <label>【WF】予定年月</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>approve_limit__c</fullName>
        <label>稟議有効期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>approve_number__c</fullName>
        <label>稟議番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>approve_status__c</fullName>
        <label>稟議状況</label>
        <picklist>
            <picklistValues>
                <fullName>稟議不要</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>稟議申請中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>稟議承認済み</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cost_type__c</fullName>
        <label>区分</label>
        <picklist>
            <picklistValues>
                <fullName>原価：請求書あり</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>原価：立替金など</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>原価：その他</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>原価：人件費</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>販管費：請求書あり</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>販管費：立替金など</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>販管費：その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>delete_date__c</fullName>
        <inlineHelpText>予定されていた支出がなくなった場合、日付を入力してください</inlineHelpText>
        <label>予定取消</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <inlineHelpText>支払ったものがわかるように入力してください</inlineHelpText>
        <label>明細</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>extra_cost__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予定外の支出にはチェックを入れてください</inlineHelpText>
        <label>予定外支出</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiced_amount__c</fullName>
        <inlineHelpText>請求書の額面を税抜きで登録してください。</inlineHelpText>
        <label>請求額</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>invoiced_date__c</fullName>
        <inlineHelpText>請求書書面で確認できる発行日や締め日を入力してください</inlineHelpText>
        <label>請求書年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>memo__c</fullName>
        <label>メモ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>payment_recipient__c</fullName>
        <label>支払先</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>receipt_date__c</fullName>
        <inlineHelpText>請求書や立替金申請書を受け取った日です</inlineHelpText>
        <label>請求書受領日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>receipt_request_date__c</fullName>
        <label>支払処理依頼日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>receipt_status__c</fullName>
        <label>処理状況</label>
        <picklist>
            <picklistValues>
                <fullName>予定</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>処理中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>完了</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>未処理</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>取消</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>record_month__c</fullName>
        <inlineHelpText>実際のPLに反映したか確認するために入力します</inlineHelpText>
        <label>計上予定</label>
        <picklist>
            <picklistValues>
                <fullName>201102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201103</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201104</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201105</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201106</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201107</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201108</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201109</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201112</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201201</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201202</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201203</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>scheduled_amount__c</fullName>
        <inlineHelpText>税抜きで登録してください</inlineHelpText>
        <label>予定額</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>scheduled_cost_type__c</fullName>
        <inlineHelpText>原価：その他は、立替金含めて発注者に対して請求できるものです。販管費は、発注者に請求できないものです。</inlineHelpText>
        <label>予定区分</label>
        <picklist>
            <picklistValues>
                <fullName>原価：請求書あり</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>原価：立替金など</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>原価：その他</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>原価：人件費</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>販管費：請求書あり</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>販管費：立替金など</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>販管費：その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>scheduled_description__c</fullName>
        <inlineHelpText>支払うものがわかるように入力してください</inlineHelpText>
        <label>予定明細</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scheduled_payment_recipient__c</fullName>
        <inlineHelpText>請求書の発行者、立替を行った人などです</inlineHelpText>
        <label>予定支払先</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>schejuled_receipt_yyyymm__c</fullName>
        <inlineHelpText>請求を受ける予定の年月を選択してください</inlineHelpText>
        <label>予定年月</label>
        <picklist>
            <picklistValues>
                <fullName>201102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201103</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201104</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201105</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201106</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201107</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201108</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201109</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201112</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201201</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201202</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201203</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>経費</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>receipt_status__c</columns>
        <columns>schejuled_receipt_yyyymm__c</columns>
        <columns>scheduled_payment_recipient__c</columns>
        <columns>scheduled_amount__c</columns>
        <columns>extra_cost__c</columns>
        <columns>delete_date__c</columns>
        <columns>invoiced_date__c</columns>
        <columns>invoiced_amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{yymm}{0000}</displayFormat>
        <label>経費No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DC_receipt_date_beforetoday</fullName>
        <active>true</active>
        <errorConditionFormula>receipt_date__c  &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>receipt_date__c</errorDisplayField>
        <errorMessage>請求書受領日は本日以前になります</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DC_request_date_after_receipt_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISNULL ( receipt_request_date__c ) = FALSE , ISNULL ( receipt_date__c ) = TRUE )</errorConditionFormula>
        <errorDisplayField>receipt_date__c</errorDisplayField>
        <errorMessage>請求書受領日が未登録です</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DC_request_date_beforetoday</fullName>
        <active>true</active>
        <errorConditionFormula>receipt_request_date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>receipt_request_date__c</errorDisplayField>
        <errorMessage>支払処理依頼日は本日以前になります</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGblank_receipt_section</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISNULL ( receipt_date__c ) = FALSE , OR ( ISNULL ( invoiced_amount__c ) = TRUE , ISNULL ( invoiced_date__c ) = TRUE , ISNULL ( payment_recipient__c ) = TRUE , ISNULL ( description__c ) = TRUE ) )</errorConditionFormula>
        <errorDisplayField>receipt_date__c</errorDisplayField>
        <errorMessage>請求書を受領したら、請求書セクションを全て入力してください</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGblank_record_month</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISNULL ( receipt_request_date__c ) = FALSE , ISPICKVAL ( record_month__c , &apos;&apos; ) )</errorConditionFormula>
        <errorDisplayField>record_month__c</errorDisplayField>
        <errorMessage>計上予定も登録してください</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGinput_unscheduled</fullName>
        <active>true</active>
        <description>予算外の登録をする場合は、予定外支出のフラグを使う</description>
        <errorConditionFormula>AND (extra_cost__c = FALSE , ISBLANK ( scheduled_payment_recipient__c ) = TRUE , ISNULL (  receipt_date__c ) = FALSE )</errorConditionFormula>
        <errorDisplayField>extra_cost__c</errorDisplayField>
        <errorMessage>予定外の支出の場合は、チェックを入れてください。</errorMessage>
    </validationRules>
</CustomObject>